Added: ExecutorService and CompletableFuture examples